--- a/album/templates/base.html
+++ b/album/templates/base.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>WunderbareKlank</title>
+    <title>WunderbareKlang</title>
     {% block custom_css %}
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'index' %}">Wunderbare Klank 1.0</a>
+                <a class="navbar-brand" href="{% url 'index' %}">Wunderbare Klang 1.0</a>
             </div>
             <!-- /.navbar-header -->
 
