Changed to 'Buscador online'.

--- a/album/templates/base.html
+++ b/album/templates/base.html
@@ -279,7 +279,7 @@
                                     <a href="#">Añadir</a>
                                 </li>
                                 <li>
-                                    <a href="{% url 'search-lastfm' %}">Añadir desde LastFm</a>
+                                    <a href="{% url 'search-lastfm' %}">Buscador online</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
